--- a/mobile/app.json
+++ b/mobile/app.json
@@ -18,7 +18,10 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.mobile"
+    },
+    "android": {
+      "package": "com.mobile"
     }
   }
 }
